fixed some bugs in the frontend and changed flow response DTO according to frontend needs