@@ -1,6 +1,8 @@
 package com.blinkflow.primary_backend.mapper;
 
 import java.util.stream.Collectors;
+
+import com.blinkflow.primary_backend.dto.ActionDTO;
 import com.blinkflow.primary_backend.dto.FlowResponseDTO;
 import com.blinkflow.primary_backend.model.Flow;
 
@@ -8,12 +10,23 @@ public class FlowMapper {
 	
 	public static FlowResponseDTO toResponseDTO(Flow flow){
 		return FlowResponseDTO.builder()
-				.userID(flow.getUser().getId())
 				.flowID(flow.getId())
 				.name(flow.getName())
+				.userID(flow.getUser().getId())
+				.availableTriggerID(flow.getFlowTrigger().getId())
 				.flowTriggerName(flow.getFlowTrigger().getTriggerType().getName())
-				.flowActionNames(flow.getFlowActions().stream().map(action -> action.getActionType().getName()).collect(Collectors.toList()))
-				.flowActionImages(flow.getFlowActions().stream().map(action -> action.getActionType().getImage()).collect(Collectors.toList()))
+				.flowTriggerImage(flow.getFlowTrigger().getTriggerType().getImage())
+				.flowTriggerMetadata(flow.getFlowTrigger().getMetadata())
+				.flowActions(
+						flow.getFlowActions().stream()
+							.map(action -> ActionDTO.builder()
+									.availableActionID(action.getActionType().getId())
+									.flowActionName(action.getActionType().getName())
+									.flowActionImage(action.getActionType().getImage())
+									.metadata(action.getMetadata())
+									.sortingOrder(action.getSortingOrder())
+									.build()
+							).toList())
 				.build();
 	}
 }
